<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ContraintLayoutDetailDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewDetailsName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/CropDarkGreen"
        android:text="@string/crop_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.CropStyle.Title"
        android:textColor="@color/CropWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetailsName">

    </LinearLayout>

    <TextView
        android:id="@+id/textViewDetailsType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/crop_type"
        android:textAppearance="@style/TextAppearance.CropStyle"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalMiddle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetailsName" />

    <TextView
        android:id="@+id/textViewDetailsFrostDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/crop_days_before_frost"
        android:textAppearance="@style/TextAppearance.CropStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetailsType" />

    <TextView
        android:id="@+id/textViewDetailsGermDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/crop_germination_time"
        android:textAppearance="@style/TextAppearance.CropStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetailsFrostDays" />

    <TextView
        android:id="@+id/textViewDetailsHarvestDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/crop_harvest_time"
        android:textAppearance="@style/TextAppearance.CropStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetailsGermDays" />

    <TextView
        android:id="@+id/textViewDetailsSun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sun_level"
        android:textAppearance="@style/TextAppearance.CropStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalMiddle"
        app:layout_constraintTop_toTopOf="@+id/textViewDetailsType" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <TextView
        android:id="@+id/textViewDetailsNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:text="@string/crop_notes"
        android:textAppearance="@style/TextAppearance.CropStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetailsHarvestDays" />

    <Space
        android:id="@+id/spaceBottomDetailsDialog"
        android:layout_width="0dp"
        android:layout_height="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetailsNotes" />

</androidx.constraintlayout.widget.ConstraintLayout>