<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?attr/colorPrimarySurface"
    tools:context=".ui.calendar.CalendarFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCropResults"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonFilters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/buttonFilters"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="?attr/colorPrimarySurface"
        android:fontFamily="@font/benchnine"
        android:text="@string/filters"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?attr/colorOnPrimary"
        android:textCursorDrawable="@drawable/ic_gears"
        app:icon="@android:drawable/arrow_up_float"
        app:iconTint="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonAllCrops"
        app:rippleColor="?attr/colorSecondary" />

    <Button
        android:id="@+id/buttonAllCrops"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/benchnine"
        android:text="@string/view_all"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?attr/colorOnPrimary"
        android:textCursorDrawable="@drawable/ic_gears"
        app:icon="@android:drawable/ic_menu_add"
        app:iconTint="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalCenter"
        app:rippleColor="?attr/colorSecondary" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textViewNoResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_results"
        android:textAppearance="@style/TextAppearance.CropStyle.Large"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewCropResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewCropResults"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewCropResults" />

</androidx.constraintlayout.widget.ConstraintLayout>